--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootswatch": "^5.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
